feat: start css +600px

--- a/app/components/footer/Footer.module.css
+++ b/app/components/footer/Footer.module.css
@@ -2,7 +2,7 @@
 		background-color: var(--grisclair);
 		padding: 20px;
 		text-align: center;
-		font-size: 14px;
+		font-size: 15px;
 		line-height: 1.6;
 		color: var(--bleu);
 	}
@@ -17,3 +17,16 @@
 		color: var(--bleu);
 		text-decoration: none;
 	}
+
+  @media (min-width: 769px) {
+    .container {
+			font-size: 20px;
+			line-height: 1.8;
+			display: flex;
+			flex-direction: column;
+			gap: 10px;
+    }
+		.div{
+			gap: 40px;
+		}
+  }
