--- a/app/page.module.css
+++ b/app/page.module.css
@@ -43,3 +43,74 @@
 	flex-direction: column;
 	justify-content: center;
 }
+.sectionImg {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	gap: 20px;
+}
+.img {
+  width: 100%;
+  height: auto;
+  max-width: 500px;
+}
+
+@media (min-width: 600px) {
+  .home {
+    padding: 3rem;
+  }
+
+  .h1 {
+    font-size: 40px;
+  }
+
+  .h2 {
+    font-size: 30px;
+		margin-bottom: 2rem;
+  }
+
+  .p, .ul {
+    font-size: 18px;
+  }
+	.ul {
+		text-align: left;
+	}
+	.section, .sectionImg  {
+		margin-top: 2.5rem;
+	}
+
+}
+
+@media (min-width: 1024px) {
+  .home {
+    padding: 4rem 8rem;
+  }
+
+  .h1 {
+    font-size: 50px;
+  }
+
+  .h2 {
+    font-size: 40px;
+		margin: 0;
+  }
+
+  .p, .ul {
+    font-size: 22px;
+  }
+
+  .section {
+		align-items: center;
+    gap: 3rem;
+  }
+
+  .cta {
+    padding: 0.75rem 1.5rem;
+    font-size: 18px;
+		width: 50%;
+  }
+	.img{
+		max-width: 600px;
+	}
+}
