--- a/app/services/page.module.css
+++ b/app/services/page.module.css
@@ -38,3 +38,75 @@
 		justify-content: center;
 		align-items: center;
 	}
+
+	/* Tablette (min-width: 600px) */
+@media (min-width: 600px) {
+  .h1 {
+    font-size: 40px;
+  }
+
+  .p,
+  .description,
+  .ul {
+    font-size: 18px;
+  }
+
+  .li {
+    gap: 20px;
+    text-align: left;
+  }
+
+  .section {
+    flex-direction: row;
+    flex-wrap: wrap; /* permet d’afficher plusieurs services sur la même ligne */
+    justify-content: center;
+    gap: 2rem;
+    align-items: flex-start;
+  }
+}
+
+/* Desktop (min-width: 1024px) */
+@media (min-width: 1024px) {
+	.container{
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+	}
+  .h1 {
+    font-size: 50px;
+		margin-bottom: 3rem;
+		margin-top: 2rem;
+  }
+
+  .p,
+  .description,
+  .ul {
+    font-size: 20px;
+		display: flex;
+		flex-direction: column;
+		gap: 20px;
+  }
+
+  .li {
+    gap: 30px;
+		flex-direction: row;
+		flex-wrap: wrap;
+		justify-content: space-around;
+  }
+
+	.title {
+		font-size: 25px;
+		width: 100%;
+		text-align: center;
+	}
+
+	.description {
+		width: 50%;
+		font-size: 22px;
+	}
+
+  .section {
+    gap: 3rem;
+		max-width: 70%;
+  }
+}
