--- a/app/components/contactForm/contactForm.module.css
+++ b/app/components/contactForm/contactForm.module.css
@@ -15,7 +15,7 @@
   margin-bottom: 1.5rem;
   line-height: 1.5;
   text-align: center;
-  font-size: 1.1rem;
+  font-size: 18px;
 }
 
 /* Formulaire */
@@ -67,5 +67,8 @@
 @media (min-width: 768px) {
   .contactForm {
     gap: 1rem;
+  }
+  .h1{
+    font-size: 40px;
   }
 }
