--- a/app/page.module.css
+++ b/app/page.module.css
@@ -37,11 +37,13 @@
 	text-decoration: none;
 	text-align: center;
 	margin-bottom: 20px;
+	max-width: 470px;
 }
 .section {
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
+	align-items: center;
 }
 .sectionImg {
 	display: flex;
@@ -73,9 +75,6 @@
   .p, .ul {
     font-size: 18px;
   }
-	.ul {
-		text-align: left;
-	}
 	.section, .sectionImg  {
 		margin-top: 2.5rem;
 	}
