--- a/app/components/footer/Footer.module.css
+++ b/app/components/footer/Footer.module.css
@@ -1,32 +1,35 @@
 .container {
-		background-color: var(--grisclair);
-		padding: 20px;
-		text-align: center;
-		font-size: 15px;
-		line-height: 1.6;
-		color: var(--bleu);
-	}
-	.div {
-		margin: 10px 0;
+	background-color: var(--grisclair);
+	padding: 20px 5px;
+	text-align: center;
+	font-size: 15px;
+	line-height: 1.6;
+	color: var(--bleu);
+}
+.div {
+	margin: 10px 0;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	gap: 15px;
+}
+.link {
+	margin: 0 8px;
+	color: var(--bleu);
+	text-decoration: none;
+}
+@media (min-width: 500px) {
+.div{
+	flex-direction: row;
+	gap: 40px;
+}
+}
+@media (min-width: 769px) {
+	.container {
+		font-size: 20px;
+		line-height: 1.8;
 		display: flex;
-		gap: 15px;
-		justify-content: center;
+		flex-direction: column;
+		gap: 10px;
 	}
-	.link {
-		margin: 0 8px;
-		color: var(--bleu);
-		text-decoration: none;
-	}
-
-  @media (min-width: 769px) {
-    .container {
-			font-size: 20px;
-			line-height: 1.8;
-			display: flex;
-			flex-direction: column;
-			gap: 10px;
-    }
-		.div{
-			gap: 40px;
-		}
-  }
+}
